Per-operation DB connections, sync race fixes, no DB work on the UI thread, screen tests, OpenPDF (#102)
- Each database operation opens its own connection; write transactions begin IMMEDIATE.
- Push no longer loses edits saved during an upload; pull no longer overwrites local edits made after its comparison, including edits within the same second (RowVersion guard). Pull reads local state once and writes in batched upserts.
- Remaining database work moved off the JavaFX thread.
- ScreenFlowTest drives the real portal through the everyday flows, isolated from real data and preferences.
- iText replaced by OpenPDF (LGPL/MPL); footer drawn in the page margin.

Closes #99
Closes #63